ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
    name: ingress-nginx
    annotations: 
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
      - http:
          paths:
            - path: /nginx
              pathType: Prefix
              backend: 
                 service:
                    name: nginx
                    port:
                       number: 80
